--- a/org.ekstep.questionunit.mcq-1.3/renderer/styles/style.css
+++ b/org.ekstep.questionunit.mcq-1.3/renderer/styles/style.css
@@ -1015,11 +1015,15 @@ span.qc-option-txt {
     transform: translateY(-50%);
     width: 100%;
     font-weight: bold;
-    margin-left: 11%;
     font-size: 1.1em;
+    display: flex;
+    justify-content: center;
+}
+
+.mcq-grid-option-text-only>p{
     white-space: nowrap; 
-  overflow: hidden;
-  text-overflow: ellipsis;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .mcq-grid-option-text>div {
@@ -1220,6 +1224,17 @@ span.qc-option-txt {
     object-fit: contain;
     overflow: hidden;
     font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.1em;
+    font-weight: bold;
+}
+
+.mcq2-2-option-text>p{ 
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .mcq2-2-option-text-text-only {
